--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,14 @@
   color: hsl(223, 47%, 23%);
 }
 .attribution {
-    font-size: 11px;
-    text-align: center;
-    margin-top: 15px;
-  }
+  font-size: 11px;
+  text-align: center;
+  margin-top: 15px;
+}
 
-  .attribution a {
-    color: hsl(228, 45%, 44%);
-  }
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
 body {
   font-family: "Red Hat Display", sans-serif;
   font-size: 16px;
@@ -32,12 +32,12 @@ body {
 }
 
 .background_image {
-  background: url("/images/pattern-background-desktop.svg");
+  background: url(/images/pattern-background-desktop.svg);
   background-repeat: no-repeat;
-  background-position-y: inherit;
   background-color: hsl(225, 100%, 94%);
-  background-size: auto;
+  background-size: cover;
   position: relative;
+  background-size: 1440px;
 }
 
 .container {
@@ -115,4 +115,39 @@ body .container {
 
 .button_cancel {
   margin-bottom: 40px;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 549px) {
+  .background_image {
+    background: url(/images/pattern-background-mobile.svg);
+    background-repeat: no-repeat;
+    background-position-y: inherit;
+    background-color: hsl(225, 100%, 94%);
+    position: relative;
+    background-size: cover;
+  }
+  .image-card img {
+    width: 350px;
+  }
+
+  .container {
+    width: 350px;
+    margin: 0 auto;
+    padding: 0px;
+    position: relative;
+  }
+
+  .grid-1 {
+    width: 300px;
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+
+  .mini_card li {
+    margin-left:15px;
+  }
+
+  .mini_card li div {
+    padding: 15px 0 0 0.4in;
+  }
 }
